// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Thumbnail /> renders a loading state 1`] = `
<styled.picture
  height={1}
  width={1}
/>
`;

exports[`<Thumbnail /> renders correctly 1`] = `
<styled.picture
  height={1}
  width={1}
>
  <img
    alt="title"
    src="url?fit=fill&w=100&h=100&fl=progressive"
  />
</styled.picture>
`;
